tests/negative_tests/scope_errors/duplicate_global.c
// INVALID - Scope Error: duplicate global declaration
// Expected: "redeclaration of 'x'"
int x;
float x;  // ERROR: redeclaration of global x

int main() {
    return 0;
}
